# appmana-comfyui-nodes-ipadapter-plus

./: .gitignore  IPAdapterPlus.py  README.md  known_models.py  pyproject.toml  setup.py  utils.py
tests/: test_workflows.py
