[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comfyui_ipadapter_plus"
version = "2.0.0"
description = "ComfyUI reference implementation for the IPAdapter models. The IPAdapter are very powerful models for image conditioning. The style and composition of a reference can be easily transferred to the generation. Think of it as a 1-image lora."
authors = [{ name = "" }]
readme = "README.md"
license = { text = "GPL-3.0-only" }
dependencies = [
  "comfyui",
  "insightface"
]

[project.urls]
"Repository" = "https://github.com/AppMana/appmana-comfyui-nodes-ipadapter-plus"

[project.scripts]
# If you have any script entry points, they would be added here

[project.entry-points."comfyui.custom_nodes"]
comfyui_ipadapter_plus = "comfyui_ipadapter_plus"

[tool.comfy]
PublisherId = "matteo"
DisplayName = "ComfyUI_IPAdapter_plus"
Icon = ""
