[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comfyui_ipadapter_plus"
version = "2.0.0"
description = "ComfyUI reference implementation for the IPAdapter models. The IPAdapter are very powerful models for image conditioning. The style and composition of a reference can be easily transferred to the generation. Think of it as a 1-image lora."
readme = "README.md"
license = { text = "GPL-3.0-only" }
dependencies = [
    "insightface",
    "onnxruntime==1.17.1",
    "onnx!=1.16.2",
    "onnxruntime-gpu @ https://aiinfra.pkgs.visualstudio.com/2692857e-05ef-43b4-ba9c-ccf1c22c437c/_packaging/9387c3aa-d9ad-4513-968c-383f6f7f53b8/pypi/download/onnxruntime-gpu/1.17.1/onnxruntime_gpu-1.17.1-cp311-cp311-win_amd64.whl ;platform_system == 'Windows' and python_version == '3.11'",
    "onnxruntime-gpu==1.17.1 ;platform_system == 'Linux'"
]

[project.urls]
"Repository" = "https://github.com/AppMana/appmana-comfyui-nodes-ipadapter-plus"

[project.entry-points."comfyui.custom_nodes"]
comfyui_ipadapter_plus = "comfyui_ipadapter_plus"

[tool.comfy]
PublisherId = "matteo"
DisplayName = "ComfyUI_IPAdapter_plus"
Icon = ""
