[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comfyui_ipadapter_plus"
version = "2.0.0"
description = "ComfyUI reference implementation for the IPAdapter models. The IPAdapter are very powerful models for image conditioning. The style and composition of a reference can be easily transferred to the generation. Think of it as a 1-image lora."
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "comfyui",
    "insightface",
    "onnx<1.16.2",
    "onnxruntime",
    "onnxruntime-gpu; platform_system != 'Darwin'",
    "nvidia-cudnn-cu12; platform_system != 'Darwin'",
]

[project.urls]
"Repository" = "https://github.com/AppMana/appmana-comfyui-nodes-ipadapter-plus"

[project.entry-points."comfyui.custom_nodes"]
comfyui_ipadapter_plus = "comfyui_ipadapter_plus"

[tool.comfy]
PublisherId = "matteo"
DisplayName = "ComfyUI_IPAdapter_plus"
Icon = ""

[tool.setuptools]
packages = [
    "comfyui_ipadapter_plus",
]

[tool.setuptools.package-dir]
"comfyui_ipadapter_plus" = "."
